Assets/MatugenTemplates/vesktop.css
/**
* @name midnight (matugen - noctalia)
* @description a dark, customizable discord theme with matugen!
* @author refact0r
* @version 2.1.1
* @invite nz87hXyvcy
* @website https://github.com/refact0r/midnight-discord
* @source https://github.com/refact0r/midnight-discord/blob/master/themes/midnight.theme.css
* @authorId 508863359777505290
* @authorLink https://www.refact0r.dev
*/

/* import theme modules */
@import url('https://refact0r.github.io/midnight-discord/build/midnight.css');

body {
  /* font options */
  --font: ''; /* change to '' for default discord font */
  --code-font: ''; /* change to '' for default discord font */
  font-weight: 400; /* normal text font weight. DOES NOT AFFECT BOLD TEXT */

  /* sizes */
  --gap: 12px; /* spacing between panels */
  --divider-thickness: 4px; /* thickness of unread messages divider and highlighted message borders */
  --border-thickness: 1px; /* thickness of borders around main panels. DOES NOT AFFECT OTHER BORDERS */

  /* animation/transition options */
  --animations: on; /* off: disable animations/transitions, on: enable animations/transitions */
  --list-item-transition: 0.2s ease; /* transition for list items */
  --dms-icon-svg-transition: 0.4s ease; /* transition for the dms icon */
  --border-hover-transition: 0.2s ease; /* transition for borders when hovered */

  /* top bar options */
  --top-bar-height: var(--gap); /* height of the top bar (discord default is 36px, old discord style is 24px, var(--gap) recommended if button position is set to titlebar) */
  --top-bar-button-position: titlebar; /* off: default position, hide: hide buttons completely, serverlist: move inbox button to server list, titlebar: move inbox button to channel titlebar (will hide title) */
  --top-bar-title-position: off; /* off: default centered position, hide: hide title completely, left: left align title (like old discord) */
  --subtle-top-bar-title: off; /* off: default, on: hide the icon and use subtle text color (like old discord) */

  /* window controls */
  --custom-window-controls: on; /* off: default window controls, on: custom window controls */
  --window-control-size: 14px; /* size of custom window controls */

  /* dms button options */
  --custom-dms-icon: custom; /* off: use default discord icon, hide: remove icon entirely, custom: use custom icon */
  --dms-icon-svg-url: url('https://refact0r.github.io/midnight-discord/assets/Font_Awesome_5_solid_moon.svg'); /* icon svg url. MUST BE A SVG. */
  --dms-icon-svg-size: 90%; /* size of the svg (css mask-size property) */
  --dms-icon-color-before: var(--icon-secondary); /* normal icon color */
  --dms-icon-color-after: var(--white); /* icon color when button is hovered/selected */
  --custom-dms-background: off; /* off to disable, image to use a background image (must set url variable below), color to use a custom color/gradient */
  --dms-background-image-url: url(''); /* url of the background image */
  --dms-background-image-size: cover; /* size of the background image (css background-size property) */
  --dms-background-color: linear-gradient(70deg, var(--blue-2), var(--purple-2), var(--red-2)); /* fixed color/gradient (css background property) */

  /* background image options */
  --background-image: off; /* off: no background image, on: enable background image (must set url variable below) */
  --background-image-url: url(''); /* url of the background image */

  /* transparency/blur options */
  /* NOTE: TO USE TRANSPARENCY/BLUR, YOU MUST HAVE TRANSPARENT BG COLORS. FOR EXAMPLE: --bg-4: hsla(220, 15%, 10%, 0.7); */
  --transparency-tweaks: off; /* off: no changes, on: remove some elements for better transparency */
  --remove-bg-layer: off; /* off: no changes, on: remove the base --bg-3 layer for use with window transparency (WILL OVERRIDE BACKGROUND IMAGE) */
  --panel-blur: off; /* off: no changes, on: blur the background of panels */
  --blur-amount: 12px; /* amount of blur */
  --bg-floating: var(--bg-3); /* set this to a more opaque color if floating panels look too transparent. only applies if panel blur is on  */

  /* chatbar options */
  --custom-chatbar: separated; /* off: default chatbar, separated: chatbar separated from chat */
  --chatbar-height: 47px; /* height of the chatbar (56px by default, 47px to align with user panel, 56px recommended for separated) */

  /* other options */
  --small-user-panel: off; /* off: default user panel, on: smaller user panel like in old discord */
}

/* color options */
:root {
  --colors: on; /* off: discord default colors, on: midnight custom colors */

  /* text colors */
  --text-0: {{colors.background.default.hex}}; /* text on colored elements */
--text-1: {{colors.on_background.default.hex}}; /* other normally white text */
--text-2: {{colors.on_surface.default.hex}}; /* headings and important text */
--text-3: {{colors.on_surface_variant.default.hex}}; /* normal text */
--text-4: {{colors.outline.default.hex}}; /* icon buttons and channels */
--text-5: {{colors.outline_variant.default.hex}}; /* muted channels/chats and timestamps */

/* background and dark colors */
--bg-1: {{colors.surface_container_lowest.default.hex}}; /* dark buttons when clicked */
--bg-2: {{colors.surface_container_low.default.hex}}; /* dark buttons */
--bg-3: {{colors.surface_container.default.hex}}; /* spacing, secondary elements */
--bg-4: {{colors.surface.default.hex}}; /* main background color */
--hover: {{colors.surface_container_high.default.hex}}; /* channels and buttons when hovered */
--active: {{colors.surface_container_highest.default.hex}}; /* channels and buttons when clicked or selected */
--active-2: {{colors.surface.default.hex}}; /* extra state for transparent buttons */
--message-hover: {{colors.surface_variant.default.hex}}; /* messages when hovered */

/* accent colors */
--accent-1: {{colors.primary.default.hex}}; /* links and other accent text */
--accent-2: {{colors.primary_container.default.hex}}; /* small accent elements */
--accent-3: {{colors.secondary.default.hex}}; /* accent buttons */
--accent-4: {{colors.secondary_container.default.hex}}; /* accent buttons when hovered */
--accent-5: {{colors.tertiary.default.hex}}; /* accent buttons when clicked */
--accent-new: {{colors.error.default.hex}}; /* stuff that's normally red like mute/deafen buttons */

  --mention: linear-gradient(to right, color-mix(in hsl, {{colors.primary_container.default.hex}}, transparent 90%) 40%, transparent); /* background of messages that mention you */
--mention-hover: linear-gradient(to right, color-mix(in hsl, {{colors.primary_container.default.hex}}, transparent 95%) 40%, transparent); /* background of messages that mention you when hovered */

  --reply: linear-gradient(to right, color-mix(in hsl, {{colors.tertiary_container.default.hex}}, transparent 90%) 40%, transparent); /* background of messages that reply to you */
--reply-hover: linear-gradient(to right, color-mix(in hsl, {{colors.tertiary_container.default.hex}}, transparent 95%) 40%, transparent); /* background of messages that reply to you when hovered */

/* status indicator colors */
--online: {{colors.primary.default.hex}}; /* change to #40a258 for default */
--dnd: {{colors.error.default.hex}}; /* change to #d83a41 for default */
--idle: {{colors.tertiary.default.hex}}; /* change to #cc954c for default */
--streaming: {{colors.secondary.default.hex}}; /* change to #9147ff for default */
--offline: {{colors.outline.default.hex}}; /* change to #82838b for default offline color */

/* border colors */
--border-light: {{colors.surface_container_high.default.hex}}; /* general light border color */
--border: {{colors.surface_container_highest.default.hex}}; /* general normal border color */
--border-hover: {{colors.surface_container_high.default.hex}}; /* border color of panels when hovered */
--button-border: hsl(220, 0%, 100%, 0.1); /* neutral border color of buttons */

/* base colors */
--red-1: {{colors.error.default.hex}};
--red-2: {{colors.error_container.default.hex}};
--red-3: {{colors.on_error.default.hex}};
--red-4: {{colors.on_error_container.default.hex}};
--red-5: {{colors.error.default.hex}};

--green-1: {{colors.primary.default.hex}};
--green-2: {{colors.primary_container.default.hex}};
--green-3: {{colors.on_primary.default.hex}};
--green-4: {{colors.on_primary_container.default.hex}};
--green-5: {{colors.primary.default.hex}};

--blue-1: {{colors.primary.default.hex}};
--blue-2: {{colors.primary_container.default.hex}};
--blue-3: {{colors.on_primary.default.hex}};
--blue-4: {{colors.on_primary_container.default.hex}};
--blue-5: {{colors.primary.default.hex}};

--yellow-1: {{colors.tertiary.default.hex}};
--yellow-2: {{colors.tertiary_container.default.hex}};
--yellow-3: {{colors.on_tertiary.default.hex}};
--yellow-4: {{colors.on_tertiary_container.default.hex}};
--yellow-5: {{colors.tertiary.default.hex}};

--purple-1: {{colors.secondary.default.hex}};
--purple-2: {{colors.secondary_container.default.hex}};
--purple-3: {{colors.on_secondary.default.hex}};
--purple-4: {{colors.on_secondary_container.default.hex}};
--purple-5: {{colors.secondary.default.hex}};
}

